--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.drawerlayout
     implementation libs.google.material
+    implementation libs.ion
+    implementation libs.gson
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
