--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.PowerHome"
         tools:targetApi="31">
         <activity
+            android:name=".activities.NewPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.AppliancesActivity"
             android:exported="false" />
         <activity
